# plonky2

./: .gitignore  Cargo.toml  OPTIMIZATION_REPORT.md  OPTIMIZATION_TASKS.md  SPEC_WASM_WEBGPU.md
ecgfp5/: Cargo.toml
ecgfp5/src/: curve.rs  gate.rs  lib.rs
ecgfp5/src/gadgets/: curve.rs  elgamal.rs  gfp5.rs  mod.rs
ecgfp5/src/gate/: gfp5_mul.rs
field/: Cargo.toml
field/src/: fft.rs  goldilocks_field.rs  lib.rs  secp256k1_base.rs  secp256k1_scalar.rs  serialization.rs  types.rs  zero_poly_coset.rs
field/src/extension/: mod.rs  quadratic.rs  quartic.rs  quintic.rs
field/src/polynomial/: mod.rs
plonky2/: Cargo.toml
plonky2/examples/: circuit_caching.rs  psy_bench_recursion.rs
plonky2/src/: lib.rs  serialization_helpers.rs
plonky2/src/batch_fri/: oracle.rs  prover.rs
plonky2/src/fri/: mod.rs  oracle.rs  proof.rs  prover.rs  reduction_strategies.rs
plonky2/src/gates/: gate.rs  gate_testing.rs
plonky2/src/hash/: batch_merkle_tree.rs  hash_types.rs  hashing.rs  merkle_proofs.rs  merkle_tree.rs
plonky2/src/iop/: generator.rs  witness.rs
plonky2/src/plonk/: circuit_builder.rs  circuit_cache.rs  circuit_data.rs  config.rs  mod.rs  proof.rs  prover.rs  vanishing_poly.rs  verifier_helper.rs
plonky2/src/recursion/: dummy_circuit.rs
plonky2/src/util/: mod.rs  reducing.rs
plonky2/src/util/serialization/: mod.rs
plonky2_hw_acc_webgpu/: Cargo.toml  build.rs
plonky2_hw_acc_webgpu/examples/: psy_bench_recursion.rs
plonky2_hw_acc_webgpu/src/: context.rs  lib.rs  prover.rs  utils.rs
plonky2_hw_acc_webgpu/src/shaders/: bit_reverse_copy.wgsl  coset_shift_inv.wgsl  fft.wgsl  fft_dit_pass.wgsl  fill_salt.wgsl  goldilocks.wgsl  ifft_reorder.wgsl  merkle_template.wgsl  mont_convert.wgsl  poseidon_template.wgsl  scatter_salt.wgsl  transpose.wgsl
plonky2_poseidon2/: Cargo.toml
plonky2_poseidon2/examples/: p2_proof.rs  psy_bench_recursion.rs
plonky2_poseidon2/src/: lib.rs
plonky2_poseidon2/src/gates/: mod.rs  poseidon2.rs  poseidon_mds.rs
plonky2_poseidon2/src/hash/: poseidon2.rs  poseidon2_goldilocks.rs
starky/: Cargo.toml
starky/src/: prover.rs  stark_testing.rs
web/: build.sh
web-demos/: .gitignore  CLAUDE.md  SPEC.md  build.sh
web-demos/plonky2-wasm-cpu/: Cargo.toml
web-demos/plonky2-wasm-cpu/src/: lib.rs
web-demos/plonky2-wasm-webgpu/: Cargo.toml
web-demos/plonky2-wasm-webgpu/src/: lib.rs
web-demos/react-app/: index.html  package-lock.json  package.json  vite.config.ts
web-demos/react-app/src/: App.tsx
web-demos/react-app/src/workers/: cpu-worker.ts  webgpu-worker.ts
web/benchmark-app/: index.html  package.json  vite.config.ts
web/benchmark-app/src/: App.tsx  vite-env.d.ts
web/plonky2-wasm-prover/: Cargo.toml
web/plonky2-wasm-prover/src/: lib.rs
web/plonky2-webgpu-prover/: Cargo.toml
web/plonky2-webgpu-prover/src/: lib.rs
