[package]
name = "plonky2_ecgfp5"
description = "EcGFp5 elliptic curve operations and custom gates for Plonky2"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["parallel", "std", "timing"]
parallel = ["plonky2/parallel", "plonky2_maybe_rayon/parallel"]
std = ["anyhow/std", "plonky2/std"]
timing = ["plonky2/timing"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }

# Local dependencies
plonky2 = { version = "1.1.0", path = "../plonky2", default-features = false }
plonky2_field = { path = "../field", default-features = false }
plonky2_maybe_rayon = { version = "1.0.0", path = "../maybe_rayon", default-features = false }
plonky2_util = { version = "1.0.0", path = "../util", default-features = false }

[dev-dependencies]
rand = { workspace = true, features = ["getrandom"] }
plonky2 = { version = "1.1.0", path = "../plonky2", features = ["gate_testing"] }

[lints]
workspace = true
