[package]
name = "plonky2_hw_acc_webgpu"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = []

[dependencies]
plonky2 = { path = "../plonky2", default-features = false, features = ["std"] }
wgpu = "24"
log = "0.4"
anyhow = "1.0"
plonky2_maybe_rayon = { version = "1.0.0", path = "../maybe_rayon", default-features = false }
plonky2_util = { version = "1.0.0", path = "../util", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
parking_lot = "0.12"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
num_cpus = { version = "1.14.0", default-features = false }
rand = { version = "0.8", features = ["getrandom"] }
rand_chacha = { version = "0.3.1", default-features = false }
serde_cbor = { version = "0.11.2" }
serde_json = { version = "1.0" }
structopt = { version = "0.3.26", default-features = false }
tynm = { version = "0.1.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
