[package]
name = "plonky2_hw_acc_webgpu"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = ["dep:pollster", "dep:env_logger", "dep:parking_lot"]

[dependencies]
plonky2 = { path = "../plonky2", default-features = false, features = ["timing"] }
wgpu = "24"
log = "0.4"
anyhow = "1.0"
lazy_static = "1.4"
plonky2_maybe_rayon = { version = "1.0.0", path = "../maybe_rayon", default-features = false }
plonky2_util = { version = "1.0.0", path = "../util", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }

# Native-only dependencies
pollster = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
parking_lot = { version = "0.12", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
num_cpus = { version = "1.14.0", default-features = false }
rand = { workspace = true, features = ["getrandom"] }
rand_chacha = { version = "0.3.1", default-features = false }
serde_cbor = { version = "0.11.2" }
serde_json = { version = "1.0" }
structopt = { version = "0.3.26", default-features = false }
tynm = { version = "0.1.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
