[package]
name = "plonky2-wasm-webgpu"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
plonky2 = { path = "../../plonky2", default-features = false, features = ["timing"] }
plonky2_field = { path = "../../field", default-features = false }
plonky2_hw_acc_webgpu = { path = "../../plonky2_hw_acc_webgpu", default-features = false }
plonky2_maybe_rayon = { path = "../../maybe_rayon", default-features = false }
plonky2_util = { path = "../../util", default-features = false }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
anyhow = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
