[package]
name = "plonky2-wasm-prover"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plonky2 = { path = "../../plonky2", default-features = false, features = ["std", "timing"] }
plonky2_field = { path = "../../field", default-features = false }
plonky2_maybe_rayon = { path = "../../maybe_rayon", default-features = false }
plonky2_util = { path = "../../util", default-features = false }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
